tests/tests/snapshots/test__maybe_undefined__maybe-undefined-phases.snap
---
source: tests/tests/maybe_undefined.rs
assertion_line: 94
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type UpdateUser = UpdateUser_Serialize | UpdateUser_Deserialize;

export type UpdateUser_Deserialize = {
	id: number,
	name?: string | null,
};

export type UpdateUser_Serialize = {
	id: number,
	name?: string | null,
};
