tests/tests/snapshots/test__maybe_undefined__maybe-undefined-single-phase-error.snap
---
source: tests/tests/maybe_undefined.rs
assertion_line: 102
expression: err.to_string()
---
Format error: type graph formatter failed: Invalid phased type usage at 'UpdateUser.name': `skip_serializing_if` requires `PhasesFormat` because unified mode cannot represent conditional omission
