tests/tests/snapshots/test__maybe_undefined__maybe-undefined-single-phase.snap
---
source: tests/tests/maybe_undefined.rs
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type UpdateUser = {
	id: number,
	name?: string | null,
};
